# cargo-installs

./: Cargo.toml  Todos.md
src/: blacklist.rs  cli.rs  main.rs
src/list/: mod.rs
src/update/: mod.rs
src/util/: crates.rs  mod.rs  settings.rs  sparse.rs  table.rs
src/util/visual/: mod.rs  version.rs
