[package]
name = "cargo-installs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
crates-index = "2.3.0"
fancy-duration = "0.7.1"
home = "0.5.9"
iter_tools = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
ureq = { version = "2.9.1", features = ["http-interop"] }
